# go-elasticsearch-playground

./: CLAUDE.md  README.md  docker-compose.yml
bulk-insert-vs-single-insert/: README.md  go.mod  insert.go  insert_test.go
concurrent-bulk-insert/: README.md  go.mod  insert.go  insert_test.go
search-using-ltr/: go.mod  ltr_query_builder.go  main.go  query_builder.go  search.go  search_type_safe_helper.go  simple_ltr_query_builder.go  string_ltr_query_builder.go
search-using-ltr/hello-ltr/: docker-compose.yml  pyproject.toml  requirements.txt
search-using-ltr/hello-ltr/ltr/: ranklib.py
search-using-ltr/hello-ltr/notebooks/elasticsearch/tmdb/: go-elasticsearch-playground.code-workspace  hello-ltr (ES).ipynb
search-using-ltr/hello-ltr/notebooks/elasticsearch/tmdb/data/: classic-training.txt  classic_model.txt  latest-training.txt  latest_model.txt
